--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                   <img src="assets/pexels-alexander-mils-2068975.jpg" alt="">
                                 </div>
                                 <div class="r-content">
-                                    <h4 class="title">TOTAL Turnover</h4>
+                                    <h4 class="title">TOTAL TURNOVER</h4>
                                     <h1 class="sensor-title">5,500</h1>
                                     <div class="bar"></div>
                                     <p>
@@ -256,8 +256,8 @@
   
     <script src="assets/js/jQuery.min.js"></script>
     <script src="assets/js/swiper.js"></script>
-    <script src="assets/scroll-out.js"></script>
-    <script src="assets/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script src="assets/js/scroll-out.js"></script>
+    <script src="assets/js/chart.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
